@@ -1,3 +1,8 @@
+Wed Jun  7 12:03:10 1995    <tytso@rsx-11.mit.edu>
+
+	* Makefile.in (CFLAGS), srv_acl.c (acl_init): Use
+		KRB5_DEFAULT_ADMIN_ACL defined in osconf.h
+
 Tue Jun  6 19:42:18 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* srv_key.c (key_decrypt_keys): On error, when clearing keyblocks,
